--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ body {
 
 #page1 h1{
     text-transform: uppercase;
-    font-size: 15vh;
+    font-size: 17vh;
+    color: #231942;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 
