--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body {
     color: white;
 }
 
+/* .has-scroll-smooth {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  } */
+
 #page1{
     width: 100vw;
     height: 100vh;
