--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ body {
     color: white;
 }
 
-/* .has-scroll-smooth {
+.has-scroll-smooth {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-  } */
+  }
 
 #page1{
     width: 100vw;
@@ -51,7 +51,15 @@ body {
 #page2 h1{
     text-transform: uppercase;
     font-size: 10vw;
-    color: white;
+    /* color: white; */
+
+
+    background-image: linear-gradient(to right, #ff7d00, #003049); /* Define the gradient */
+    -webkit-background-clip: text; /* For browser compatibility */
+    background-clip: text;
+    color: transparent; /* Hides the original text color */
+
+  
     font-family: head;
     white-space: nowrap;
     font-weight: 700;
